UPDATE: Fixing icon alignment

--- a/main.css
+++ b/main.css
@@ -314,10 +314,17 @@ nav {
 .main-daydiv button :last-child div:first-child {
   display: flex;
   margin-right: 0.5rem;
+  width: 30px;
 }
 @media (min-width: 320px) {
   .main-daydiv button :last-child div:first-child {
     margin-right: 2rem;
+  }
+}
+@media (min-width: 980px) {
+  .main-daydiv button :last-child div:first-child {
+    justify-content: center;
+    width: 60px;
   }
 }
 @media (min-width: 980px) {
@@ -329,6 +336,11 @@ nav {
   flex-direction: column;
   align-items: flex-end;
   width: 30px;
+}
+@media (min-width: 980px) {
+  .main-daydiv button :last-child div:last-child {
+    width: 60px;
+  }
 }
 .main-daydiv button :last-child div:last-child :first-child {
   font-family: "Inter", Arial, Helvetica, sans-serif;
@@ -376,7 +388,6 @@ nav {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  gap: 1rem;
   font-size: 0.6rem;
   margin-right: 8px;
   padding: 8px 1px 8px 8px;
@@ -387,6 +398,9 @@ nav {
     font-size: 0.75rem;
     margin-right: 20px;
   }
+}
+.weather-temp-titles div:first-child {
+  margin-right: 2.5rem;
 }
 
 .temp-high-low {
