--- a/style/components/_dayElement.scss
+++ b/style/components/_dayElement.scss
@@ -43,9 +43,15 @@
       div:first-child {
         display: flex;
         margin-right: 0.5rem;
+        width: 30px;
 
         @include devices(mobile) {
           margin-right: 2rem;
+        }
+
+        @include devices(desktop) {
+          justify-content: center;
+          width: 60px;
         }
 
         .weatherIcon {
@@ -59,6 +65,10 @@
         flex-direction: column;
         align-items: flex-end;
         width: 30px;
+
+        @include devices(desktop) {
+          width: 60px;
+        }
 
         :first-child {
           @include fontSemiBold("Inter");
@@ -104,7 +114,6 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  gap: 1rem;
   font-size: 0.6rem;
   margin-right: 8px;
   padding: 8px 1px 8px 8px;
@@ -113,6 +122,10 @@
     gap: 1.5rem;
     font-size: 0.75rem;
     margin-right: 20px;
+  }
+
+  div:first-child {
+    margin-right: 2.5rem;
   }
 }
 
